--- a/mnist_example/MNIST_example.ipynb
+++ b/mnist_example/MNIST_example.ipynb
@@ -35,11 +35,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 99,
    "metadata": {
     "id": "VzwBcgpRQNI5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x000001DE5F3F31F0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Gavriil\\VS_projects\\lambda_KAN\\.venv\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\", line 1663, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"c:\\Users\\Gavriil\\VS_projects\\lambda_KAN\\.venv\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\", line 1621, in _shutdown_workers\n",
+      "    if self._persistent_workers or self._workers_status[worker_id]:\n",
+      "AttributeError: '_MultiProcessingDataLoaderIter' object has no attribute '_workers_status'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0:   0%|          | 0/196 [7:15:13<?, ?it/s]\n",
+      "Epoch 0:   0%|          | 0/196 [7:07:18<?, ?it/s]\n",
+      "Epoch 0:  41%|████▏     | 81/196 [1:55:18<2:43:42,  0.01it/s, v_num=2, loss=2.300]\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -71,6 +94,8 @@
     ")\n",
     "from lightning.pytorch.callbacks import ModelCheckpoint\n",
     "from tbparse import SummaryReader\n",
+    "\n",
+    "from kan import KANLayer\n",
     "\n",
     "import random\n",
     "\n",
@@ -232,12 +257,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "KAN:"
+    "ReLU KAN:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,18 +272,84 @@
     "        self.act = nn.ReLU\n",
     "        self.layers = nn.Sequential(\n",
     "            nn.Flatten(),\n",
-    "            ReLUKANLayer(input_size=28 * 28, output_size=32, \n",
-    "                         grid=3, overlap=1.,\n",
-    "                         basis_f_left_boarder=0, basis_f_right_boarder=1),\n",
-    "            self.act(),\n",
-    "            nn.Linear(32, 16),\n",
-    "            self.act(),\n",
-    "            nn.Linear(16, 10),\n",
+    "            ReLUKANLayer(input_size=28 * 28, output_size=10, \n",
+    "                         grid=10, overlap=1.,\n",
+    "                         basis_f_left_boarder=0, basis_f_right_boarder=1,\n",
+    "                         init_mu=1),\n",
+    "            #self.act(),\n",
+    "            #nn.Linear(32, 16),\n",
+    "            #self.act(),\n",
+    "            nn.Linear(10, 10),\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.layers(x)\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spline KAN:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SplineKANLayer(KANLayer):\n",
+    "    def forward(self, x):\n",
+    "        y, preacts, postacts, postspline = super().forward(x)\n",
+    "        return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MnistSplineKAN(nn.Module):\n",
+    "    def __init__(self, input_shape=(1, 28, 28)):\n",
+    "        super().__init__()\n",
+    "        self.act = nn.ReLU\n",
+    "        self.layers = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            SplineKANLayer(in_dim=28 * 28, out_dim=64, \n",
+    "                           num=5, k=3),\n",
+    "            self.act(),\n",
+    "            nn.Linear(64, 32),\n",
+    "            self.act(),\n",
+    "            nn.Linear(32, 10),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.layers(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output_var: torch.Size([2, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = MnistSplineKAN()\n",
+    "\n",
+    "input_var = torch.randn(2,28,28)\n",
+    "\n",
+    "print(f'output_var: {model(input_var).shape}')"
    ]
   },
   {
@@ -502,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -750,31 +841,48 @@
      "output_type": "stream",
      "text": [
       "Seed set to 1755\n",
+      "c:\\Users\\Gavriil\\VS_projects\\lambda_KAN\\.venv\\lib\\site-packages\\lightning\\pytorch\\utilities\\parsing.py:209: Attribute 'model' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['model'])`.\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n",
       "\n",
       "  | Name          | Type             | Params | Mode \n",
       "-----------------------------------------------------------\n",
-      "0 | model         | MnistKAN         | 80.7 K | train\n",
+      "0 | model         | MnistSplineKAN   | 95.8 K | train\n",
       "1 | criterion     | CrossEntropyLoss | 0      | train\n",
       "2 | metrics       | MetricCollection | 0      | train\n",
       "3 | train_metrics | MetricCollection | 0      | train\n",
       "4 | val_metrics   | MetricCollection | 0      | train\n",
       "-----------------------------------------------------------\n",
-      "80.7 K    Trainable params\n",
-      "0         Non-trainable params\n",
-      "80.7 K    Total params\n",
-      "0.323     Total estimated model params size (MB)\n",
-      "15        Modules in train mode\n",
-      "0         Modules in eval mode\n"
+      "78.5 K    Trainable params\n",
+      "17.2 K    Non-trainable params\n",
+      "95.8 K    Total params\n",
+      "0.383     Total estimated model params size (MB)\n",
+      "13        Modules in train mode\n",
+      "0         Modules in eval mode\n",
+      "c:\\Users\\Gavriil\\VS_projects\\lambda_KAN\\.venv\\lib\\site-packages\\lightning\\pytorch\\trainer\\connectors\\data_connector.py:420: Consider setting `persistent_workers=True` in 'train_dataloader' to speed up the dataloader worker initialization.\n",
+      "c:\\Users\\Gavriil\\VS_projects\\lambda_KAN\\.venv\\lib\\site-packages\\lightning\\pytorch\\trainer\\connectors\\data_connector.py:420: Consider setting `persistent_workers=True` in 'val_dataloader' to speed up the dataloader worker initialization.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2:   0%|          | 0/196 [00:00<?, ?it/s, v_num=1, loss=0.563]          "
+      "Epoch 19: 100%|██████████| 196/196 [00:36<00:00,  5.30it/s, v_num=1, loss=0.151] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=20` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 19: 100%|██████████| 196/196 [00:37<00:00,  5.29it/s, v_num=1, loss=0.151]\n"
      ]
     }
    ],
@@ -792,14 +900,14 @@
     "\n",
     "L.seed_everything(1755)\n",
     "\n",
-    "model = MnistKAN() #MnistKAN() #MnistMLP() #MnistCNN() #MnistLR()\n",
+    "model = MnistSplineKAN() #MnistSplineKAN() #MnistKAN() #MnistMLP() #MnistCNN() #MnistLR()\n",
     "pl_model = LModel(model)\n",
     "trainer = L.Trainer(\n",
     "    max_epochs=20,\n",
     "    callbacks=[checkpoint_callback],\n",
     "    num_sanity_val_steps=0,\n",
     "    log_every_n_steps=10,\n",
-    "    logger=L.pytorch.loggers.TensorBoardLogger(save_dir=\"./logs/KAN/\"),\n",
+    "    logger=L.pytorch.loggers.TensorBoardLogger(save_dir=\"./logs/SplineKAN/\"),\n",
     ")\n",
     "\n",
     "trainer.fit(\n",
