--- a/mnist_example/Training.ipynb
+++ b/mnist_example/Training.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -542,7 +542,7 @@
     "        if not os.path.exists(directory):\n",
     "            os.makedirs(directory)\n",
     "        show_sensitivity(W = self.model.get_W(),\n",
-    "                         title = f'Linear Regression model | epoch={self.current_epoch}',\n",
+    "                         title = f'Linear Regression model | epoch={self.current_epoch+1}',\n",
     "                         save_pic=True, \n",
     "                         file_path=directory + f'\\\\{self.current_epoch}.png')\n",
     "\n",
@@ -748,7 +748,7 @@
     "        if not os.path.exists(directory):\n",
     "            os.makedirs(directory)\n",
     "        show_sensitivity(W = self.model.get_W(),\n",
-    "                         title = f'lambda KAN model | epoch={self.current_epoch}',\n",
+    "                         title = f'lambda KAN model | epoch={self.current_epoch+1}',\n",
     "                         save_pic=True, \n",
     "                         file_path=directory + f'\\\\{self.current_epoch}.png')\n",
     "\n",
@@ -1192,7 +1192,7 @@
     "        if not os.path.exists(directory):\n",
     "            os.makedirs(directory)\n",
     "        show_sensitivity(W = self.model.get_W(),\n",
-    "                         title = f'trainable lambda KAN model | epoch={self.current_epoch}',\n",
+    "                         title = f'trainable lambda KAN model | epoch={self.current_epoch+1}',\n",
     "                         save_pic=True, \n",
     "                         file_path=directory + f'\\\\{self.current_epoch}.png')\n",
     "\n",
